// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`if.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
if(
    true
    // 1
  ) {}

if(true)// 2
{}

if(true)
// 22
{}

if(true){}// 3

if(true)/*4*/{}

if(
  true // 5
  && true // 52
  ){}

if(true) {} // 6

if(true) /* 7 */ ++x;

if(1) // 8
  foo();

if (0) {// comment
}

if (0) {
  // comment
}

if (0) {/* comment */}

if ((0, 0/* comment */)) {}

=====================================output=====================================
if (
  true
  // 1
) {
}

if (true) // 2
{
}

if (true)
// 22
{
}

if (true) {
} // 3

if (true) /*4*/ {
}

if (
  true && // 5
  true // 52
) {
}

if (true) {
} // 6

if (true) /* 7 */ ++x;

if (1)
  // 8
  foo();

if (0) {
  // comment
}

if (0) {
  // comment
}

if (0) {
  /* comment */
}

if ((0, 0) /* comment */) {
}

================================================================================
`;

exports[`switch.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
switch(
    true
    // 1
  ) {}

switch(true)// 2
{}

switch(true)
// 22
{}

switch(true){}// 3

switch(true)/*4*/{}

switch(
  true // 5
  && true // 52
  ){}

switch(true) {} // 6

switch (0) {// comment
}

switch (0) {
  // comment
}

switch (0) {/* comment */}

switch ((0, 0/* comment */)) {}

=====================================output=====================================
switch (
  true
  // 1
) {
}

switch (
  true // 2
) {
}

switch (
  true
  // 22
) {
}

switch (true) {
} // 3

switch (true /*4*/) {
}

switch (
  true && // 5
  true // 52
) {
}

switch (true) {
} // 6

switch (0) {
  // comment
}

switch (0) {
  // comment
}

switch (0) {
  /* comment */
}

switch ((0, 0) /* comment */) {
}

================================================================================
`;

exports[`while.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
while(
    true
    // 1
  ) {}

while(true)// 2
{}

while(true)
// 22
{}

while(true){}// 3

while(true)/*4*/{}

while(
  true // 5
  && true // 52
  ){}

while(true) {} // 6

while(true) /* 7 */ ++x;

while(1) // 8
  foo();

while (0) {// comment
}

while (0) {
  // comment
}

while (0) {/* comment */}

while ((0, 0/* comment */)) {}

=====================================output=====================================
while (
  true
  // 1
) {}

while (true) // 2
{}

while (true)
// 22
{}

while (true) {} // 3

while (true) /*4*/ {}

while (
  true && // 5
  true // 52
) {}

while (true) {} // 6

while (true) /* 7 */ ++x;

while (1)
  // 8
  foo();

while (0) {
  // comment
}

while (0) {
  // comment
}

while (0) {
  /* comment */
}

while ((0, 0) /* comment */) {}

================================================================================
`;

exports[`with.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
with(
    foo
    // 1
  ) {}

with(foo)// 2
{}

with(foo)
// 22
{}

with(foo){}// 3

with(foo)/*4*/{}

with(
  foo // 5
  ?? bar // 52
  ){}

with(foo) {} // 6

with(foo) /* 7 */ ++x;

with(1) // 8
  foo();

with (0) {// comment
}

with (0) {
  // comment
}

with (0) {/* comment */}

with ((0, 0/* comment */)) {}

=====================================output=====================================
with (
  foo
  // 1
) {
}

with (foo) // 2
{
}

with (foo)
// 22
{
}

with (foo) {
} // 3

with (foo) /*4*/ {
}

with (
  foo ?? // 5
    bar // 52
) {
}

with (foo) {
} // 6

with (foo) /* 7 */ ++x;

with (1)
  // 8
  foo();

with (0) {
  // comment
}

with (0) {
  // comment
}

with (0) {
  /* comment */
}

with ((0, 0) /* comment */) {
}

================================================================================
`;
